# extract-ner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  compose.yaml  judgment-rules.md  main.py  pyproject.toml
data/: mask_dict.sample.yaml
docker/: Dockerfile
src/: cli.py  constants.py  logger.py
src/core/document/: __init__.py  document_loader.py
src/core/document/loaders/: __init__.py  custom_text_loader.py  excel_loader.py  pdf_loader.py  powerpoint_loader.py  word_loader.py
src/llm/: __init__.py  detect_layer.py  schema.py  windows.py
src/masking/: __init__.py  allowlist.py  cache.py  dictionary.py  engine.py
src/ner/: __init__.py  engine.py  preprocess.py  rendering.py
src/sources/: __init__.py  files.py  kb_mcp.py
src/utils/: text_utils.py
tests/: test_allowlist.py  test_llm_cache.py  test_llm_detect_layer.py  test_llm_engine_votes.py  test_llm_windows.py
