[project]
name = "extract-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.4.1",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "ja-ginza-electra>=5.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "mcp>=0.9.0",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "pdfminer-six>=20221105",
    "pyyaml>=6.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "spacy>=3.6,<3.8",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.5.0",
    "xlrd>=2.0.2",
]

[project.scripts]
extract-ner = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# パッケージは src/（importable な名前が "src"）。app.py / main.py はルート直下の
# スクリプトで、エントリポイント（src.cli）は editable インストールで解決される。
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"

# 型スタブを提供しない（または lint 実行環境に入っていない）サードパーティ
# ライブラリの import エラーを抑制する。
[[tool.mypy.overrides]]
module = [
    "chardet",
    "click",
    "click.*",
    "docx",
    "docx.*",
    "dotenv",
    "langchain_core",
    "langchain_core.*",
    "langchain_community",
    "langchain_community.*",
    "langchain_text_splitters",
    "langchain_text_splitters.*",
    "tiktoken",
    "tiktoken.*",
    "mcp",
    "mcp.*",
    "pandas",
    "pandas.*",
    "pdfminer",
    "pdfminer.*",
    "pptx",
    "pptx.*",
    "pydantic",
    "pydantic.*",
    "spacy",
    "spacy.*",
    "streamlit",
    "streamlit.*",
    "yaml",
]
ignore_missing_imports = true
