[project]
name = "data-redactor"
version = "0.1.0"
description = "GiNZA (spaCy) ベースの日本語ドキュメント機密マスキング（NER＋辞書＋正規表現）"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.4.1",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "ja-ginza-electra>=5.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "mcp>=0.9.0",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "pdfminer-six>=20221105",
    "pyyaml>=6.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "spacy>=3.6,<3.8",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.5.0",
    "xlrd>=2.0.2",
    "openai>=2.43.0",
    "azure-identity>=1.25.3",
    "pydantic>=2.13.4",
]

[project.scripts]
data-redactor = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# パッケージは src/（importable な名前が "src"）。app.py / main.py はルート直下の
# スクリプトで、エントリポイント（src.cli）は editable インストールで解決される。
[tool.hatch.build.targets.wheel]
packages = ["src"]

# external/ は pii-masker の git submodule（他リポジトリのコード）。整形・lint・型チェックの対象外
# （`black .` / `ruff check .` / `mypy .` がリポジトリ全体を走るため、submodule を触らないよう除外）。
[tool.black]
extend-exclude = "^/external/"

[tool.ruff]
extend-exclude = ["external"]

[tool.mypy]
python_version = "3.11"
exclude = ["^external/"]

# 型スタブを提供しない（または lint 実行環境に入っていない）サードパーティ
# ライブラリの import エラーを抑制する。
[[tool.mypy.overrides]]
module = [
    "chardet",
    "click",
    "click.*",
    "docx",
    "docx.*",
    "dotenv",
    "langchain_core",
    "langchain_core.*",
    "langchain_community",
    "langchain_community.*",
    "langchain_text_splitters",
    "langchain_text_splitters.*",
    "tiktoken",
    "tiktoken.*",
    "mcp",
    "mcp.*",
    "pandas",
    "pandas.*",
    "pdfminer",
    "pdfminer.*",
    "pii_masker",
    "pii_masker.*",
    "pytest",
    "pptx",
    "pptx.*",
    "pydantic",
    "pydantic.*",
    "spacy",
    "spacy.*",
    "sudachipy",
    "sudachipy.*",
    "streamlit",
    "streamlit.*",
    "yaml",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# spaCy 3.7 の cli/_util.py が click 8.x で deprecated の `click.parser.split_arg_string` を import する
# ため DeprecationWarning が出る（Click 9.0 までは実害なし・spaCy 側のコードで我々では直せない）。
# 依存は固定（spaCy 3.7 / click 8.x）なので、この 1 件だけ抑制してテスト出力をクリーンに保つ
# （他の警告は従来どおり表示される＝メッセージ指定の限定抑制）。
filterwarnings = [
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
]
